package(
    default_visibility = ["//visibility:public"]
)

# BUILD.bazel
proto_library(
    name = "greeter_proto",
    srcs = ["thing.proto", "greeter.proto"],
    deps = ["@com_google_protobuf//:any_proto"]
)

# BUILD.bazel
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")

cpp_grpc_library(
    name = "cpp_grpc_library",
    protos = [":greeter_proto"]
)