package(
    default_visibility = ["//visibility:public"]
)

# BUILD.bazel
proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
    deps = ["@com_google_protobuf//:any_proto"],
)

# BUILD.bazel
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_proto_library")

cpp_proto_library(
    name = "cpp_proto_library",
    protos = [":greeter_proto"],
)